classDiagram
    class Game{
        +bool game_over
        +int score
        +start_game()
        +end_game()
        +pause_game()
        +resume_game()
        +update_score()
    }
    class Snake{
        +list body
        +str direction
        +move()
        +grow()
        +check_collision()
    }
    class Food{
        +tuple position
        +generate()
    }
    Game "1" -- "1" Snake: controls
    Game "1" -- "1" Food: generates
